--- a/Problem 1/Solution.ipynb
+++ b/Problem 1/Solution.ipynb
@@ -7,9 +7,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import math\n",
-    "def matrix_dot_vector(a:list[list[int|float]],b:list[int|float])-> list[int|float]:\n",
-    "\t"
+    "\n",
+    "def matrix_dot_vector(a: list[list[int | float]], b: list[int | float]) -> list[int | float]:\n",
+    "    return -1 if len(a[0]) != len(b) else np.dot(np.array(a), np.array(b)).tolist()\n"
    ]
   }
  ],
